Fix last section alignment

--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -256,7 +256,7 @@
 }
 
 .sideFacts h2 {
-  padding: 0px 0px 40px;
+  padding: 0px 0px 30px;
   width: 100%;
   text-align: center;
   font-size: 52px;
@@ -266,7 +266,8 @@
 .sideFacts p {
   font-size: 20px;
   font-weight: normal;
-  padding: 16px;
+  padding: 16px 0px 20px;
+  text-align: center;
 }
 
 .factsContainer {
